# noxim_dramsys

./: .gitignore  CMakeLists.txt  DramInterface.dram_ddr4-example_example_ch0.tdb  README.md
cmake_json/: nlohmann_jsonConfig.cmake  nlohmann_jsonConfigVersion.cmake
configs/: dramsys_ddr4.json  dramsys_ddr4_4ch.json  dramsys_ddr4_6ch.json  dramsys_ddr4_6ch_v3.json  dramsys_lpddr4_4ch.json  mcconfig_ddr4_tuned.json  mcconfig_lpddr4_tuned.json  noxim_1x4.yaml  noxim_2x2.yaml  noxim_4pe_4ch.yaml  noxim_default.yaml  simconfig_example.json
configs/addressmapping/: am_ddr4_6ch.json
configs/memspec_ddr4_4ch/: am_ddr4_4ch.json  memspec_ddr4_4ch.json
configs/memspec_ddr4_6ch/: am_ddr4_6ch.json  memspec_ddr4_6ch.json  memspec_ddr4_6ch_v2.json  memspec_ddr4_6ch_v3.json  memspec_ddr4_6ch_v4.json  memspec_ddr4_6ch_v5.json  memspec_ddr4_6ch_v6.json  memspec_ddr4_6ch_v7.json  memspec_ddr4_6ch_v8.json
configs/memspec_lpddr4_4ch/: am_lpddr4_4ch.json  memspec_lpddr4_4ch.json
src/: DramInterface.cpp  DramInterface.h  MemTrafficGen.cpp  MemTrafficGen.h  NoC2DramBridge.cpp  NoC2DramBridge.h  NoCInterface.cpp  NoCInterface.h  NoCXbar4x4.cpp  NoCXbar4x4.h  NoximGlobals.cpp  NoximPE.cpp  NoximPE.h  PE4DRAM.cpp  PE4DRAM.h  PEMemTester.cpp  PEMemTester.h  dram_channel.cpp  dram_channel.h  noc_xbar.cpp  noc_xbar.h  pe.cpp  pe.h  sc_main.cpp
